[project]
name = "django-project-template"
version = "1.0.0"
description = ""
authors = [{ name = "IL-studio", email = "welcome@il-studio.ru" }]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "django>=5.2,<6.0",
    "django-axes>=7.0,<8.0",
    "django-braces>=1.15,<2.0",
    "django-cleanup>=8.0,<9.0",
    "django-environ>=0.11.2,<0.12",
    "django-extensions>=3.2,<4.0",
    "django-extra-views>=0.14,<0.15",
    "django-health-check>=3.18.2,<4.0",
    "django-loginas>=0.3,<0.4",
    "django-model-utils>=4.5,<5.0",
    "django-split-settings>=1.3,<2.0",
    "django-storages[s3]>=1.14,<2.0",
    "django-vite>=3.0,<4.0",
    "gunicorn>=23.0,<24.0",
    "pillow>=12.2,<13.0",
    "python-dateutil>=2.8.2,<3.0",
    "requests>=2.33,<3.0",
    "singlemodeladmin>=0.9,<0.10",
]

[dependency-groups]
dev = [
    "covdefaults>=2.3.0,<3.0",
    "django-coverage-plugin>=3.1.0,<4.0",
    "django-debug-toolbar>=4.4,<5.0",
    "django-stubs>=5.0,<6.0",
    "docutils>=0.21.2,<0.22",
    "ipython>=8.25,<9.0",
    "psycopg2-binary>=2.9,<3.0",
    "pytest>=9.0.3,<10.0",
    "pytest-django>=4.11.1,<5.0",
    "ruff>=0.14,<0.15",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["applications", "settings"]

[tool.ruff]
line-length = 100
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    ".env",
    ".env_legacy",
]
target-version = "py313"

[tool.ruff.lint]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
select = [
    "E",
    "F",
	"I",
    "T20",
    "UP",
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.per-file-ignores]
"import/*" = ["T20"]
"__init__.py" = ["F401"]

[tool.ruff.format]
quote-style = 'single'

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "settings.settings"
