[project]
name = "django-project-template"
version = "1.0.0"
description = "Modern Django project template with uv, Vite, django-axes, optional S3."
authors = [{ name = "Ivan Lukyanets", email = "lukyanets.ivan@gmail.com" }]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.13,<4.0"
dependencies = [
    "django>=6.0.7,<7.0",
    "django-axes>=8.0,<9.0",
    "django-braces>=1.17,<2.0",
    "django-cleanup>=9.0,<10.0",
    "django-environ>=0.14.0,<0.15",
    "django-extensions>=4.0,<5.0",
    "django-extra-views>=0.16,<0.17",
    "django-health-check>=4.4.3,<5.0",
    "django-loginas>=0.3,<0.4",
    "django-model-utils>=5.0,<6.0",
    "django-split-settings>=1.3,<2.0",
    "django-storages[s3]>=1.14.6,<2.0",
    "django-vite>=3.1,<4.0",
    "gunicorn>=26.0.0,<27.0",
    "pillow>=12.3.0,<13.0",
    "python-dateutil>=2.9,<3.0",
    "requests>=2.34.2,<3.0",
    "singlemodeladmin>=0.9,<0.10",
]

[dependency-groups]
dev = [
    "covdefaults>=2.3,<3.0",
    "django-coverage-plugin>=3.2,<4.0",
    "django-debug-toolbar>=7.0.0,<8.0",
    "django-stubs>=6.0.6,<7.0",
    "docutils>=0.23,<0.24",
    "ipython>=9.13.0,<10.0",
    "psycopg2-binary>=2.9,<3.0",
    "pytest>=9.1.1,<10.0",
    "pytest-django>=4.11,<5.0",
    "ruff>=0.15.12,<0.16",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["applications", "settings"]

[tool.ruff]
line-length = 100
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    ".env",
    ".env_legacy",
]
target-version = "py313"

[tool.ruff.lint]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
select = [
    "E",
    "F",
	"I",
    "T20",
    "UP",
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.per-file-ignores]
"import/*" = ["T20"]
"__init__.py" = ["F401"]

[tool.ruff.format]
quote-style = 'single'

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "settings.settings"
